<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:background="@color/main_background">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomBarrier"
        app:layout_constraintEnd_toStartOf="@+id/point25Guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:scaleType="fitXY"
        tools:srcCompat="@drawable/circle_profile_image" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/point25Guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/user_name"
        tools:textColor="black"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:text="Address"
        app:layout_constraintBottom_toTopOf="@+id/bottomBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/point25Guideline"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/user_address" />

    <TextView
        android:id="@+id/pickUpTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="pickup"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/timeTextView"
        app:layout_constraintEnd_toStartOf="@+id/point25Guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomBarrier"
        tools:text="@string/delivery_service" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="Now"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/point25Guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickUpTextView"
        tools:text="@string/delivery_time" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="price"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/priceValueTextView"
        app:layout_constraintEnd_toStartOf="@+id/point50Guideline"
        app:layout_constraintStart_toStartOf="@+id/point25Guideline"
        app:layout_constraintTop_toTopOf="@+id/pickUpTextView"
        tools:text="@string/price_text" />

    <TextView
        android:id="@+id/priceValueTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="Rp 42.000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/point50Guideline"
        app:layout_constraintStart_toStartOf="@+id/point25Guideline"
        app:layout_constraintTop_toTopOf="@+id/timeTextView"
        tools:text="@string/price_value" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="status"

        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/point75Guideline"
        app:layout_constraintStart_toStartOf="@+id/point50Guideline"
        app:layout_constraintTop_toTopOf="@+id/pickUpTextView"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/status" />

    <TextView
        android:id="@+id/deliveryTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="Pickup"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@+id/point75Guideline"
        app:layout_constraintStart_toStartOf="@+id/point50Guideline"
        app:layout_constraintTop_toTopOf="@+id/timeTextView"
        tools:text="@string/status_value" />

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="64dp"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/point75Guideline"
        app:layout_constraintTop_toTopOf="@+id/bottomBarrier"
        app:layout_constraintVertical_bias="0.0"
        tools:background="@color/main_background"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@drawable/apple" />

    <android.support.constraint.Guideline
        android:id="@+id/point25Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/point50Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/point75Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Barrier
        android:id="@+id/bottomBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="383dp"
        android:layout_marginRight="383dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="pickUpTextView,timeTextView,priceTextView,priceValueTextView,statusTextView,deliveryTextView,productImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:id="@+id/shadow_background"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/shadow_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomBarrier" />


</android.support.constraint.ConstraintLayout>
